--- a/src/main/resources/com/asstmngm/assetmanagement/Display.fxml
+++ b/src/main/resources/com/asstmngm/assetmanagement/Display.fxml
@@ -1,21 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #282828;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.asstmngm.assetmanagement.DisplayEntryController">
    <children>
-      <TableView prefHeight="720.0" prefWidth="1080.0">
+      <TableView id="dataTable" prefHeight="620.0" prefWidth="1080.0" style="-fx-background-color: #282828; -fx-text-fill: WHITE;">
         <columns>
-            <TableColumn maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" text="Sr" />
-          <TableColumn maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" text="ID" />
-          <TableColumn maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" text="Purchase Date" />
-            <TableColumn maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" text="Type" />
-            <TableColumn maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" text="Price" />
-            <TableColumn maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" text="Status" />
+            <TableColumn id="dataSR" maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" style="-fx-background-color: #4169E1;" text="Sr" />
+          <TableColumn id="dataID" maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" style="-fx-background-color: #4169E1;" text="ID" />
+          <TableColumn id="dataPD" maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" style="-fx-background-color: #4169E1;" text="Purchase Date" />
+            <TableColumn id="dataType" maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" style="-fx-background-color: #4169E1;" text="Type" />
+            <TableColumn id="dataPrice" maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" style="-fx-background-color: #4169E1;" text="Price" />
+            <TableColumn id="dataStatus" maxWidth="180.0" minWidth="-1.0" prefWidth="180.0" style="-fx-background-color: #4169E1;" text="Status" />
         </columns>
       </TableView>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackAction" prefHeight="80.0" prefWidth="210.0" style="-fx-background-color: #4169E1;" text="BACK" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitAction" prefHeight="80.0" prefWidth="210.0" style="-fx-background-color: RED;" text="EXIT" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="100.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </VBox>
