--- a/src/main/resources/com/asstmngm/assetmanagement/Operations.fxml
+++ b/src/main/resources/com/asstmngm/assetmanagement/Operations.fxml
@@ -22,7 +22,7 @@
                   <ToggleGroup fx:id="dbSelection" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="useDBButton" mnemonicParsing="false" onAction="#onDBSelected" selected="true" text="Use Exsisting Database" textAlignment="CENTER" textFill="WHITE" toggleGroup="$dbSelection">
+            <RadioButton fx:id="useDBButton" mnemonicParsing="false" onAction="#onDBSelected" text="Use Exsisting Database" textAlignment="CENTER" textFill="WHITE" toggleGroup="$dbSelection">
                <font>
                   <Font size="16.0" />
                </font>
@@ -67,11 +67,6 @@
             <Insets bottom="50.0" />
          </VBox.margin>
       </TextField>
-      <Button fx:id="okButton" mnemonicParsing="false" onAction="#onDBSelected" prefHeight="25.0" prefWidth="113.0" style="-fx-background-color: #4169E1;" text="OK" textFill="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
       <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitAction" prefHeight="39.0" prefWidth="113.0" style="-fx-background-color: #4169E1;" text="EXIT" textFill="WHITE">
          <VBox.margin>
             <Insets top="25.0" />
